# 0dte-strategy

./: .gitignore  ARCHITECTURE_JOEY_REBUILD.md  ARCHITECTURE_R0_REBUILD.md  ARCHIVE_SHORT_VOL_BRANCH.md  CLAUDE.md  DAILY_LOG.md  GPT_PRO_0DTE_BRIEF.md  GPT_PRO_0DTE_VERDICT.md  GPT_PRO_BASELINE1.md  GPT_PRO_BASELINE1_V2.md  GPT_PRO_DAY2_5_UNEXPECTED.md  GPT_PRO_FOLLOWUP.md  GPT_PRO_M4_FALSIFICATION_COMPLETE.md  GPT_PRO_REALIGN_JOEY_PATH.md  GPT_PRO_REALIGN_PATH.md  GPT_PRO_REVIEW_REQUEST.md  GPT_PRO_ROUND3.md  GPT_PRO_ROUND5_THETA.md  GPT_PRO_ROUND5_VERDICT.md  GPT_PRO_VERDICT.md  HANDOFF.md  MORNING_SUMMARY.md  PROJECT_STATUS.md  README.md  ROADMAP_0DTE.md  ULTRA_REVIEW_PROMPT.md  backtest_run.py  main.py  pyproject.toml
docs/: MORNING_HANDOFF_2026_04_21.md  R0_RIP_2026_04_21.md  gpt_pro_brief_2026_04_20.md  gpt_pro_brief_2026_04_21_round7.md  independent_validation_plan.md  joey_bot_extracted_specs.md  joey_payoff_model.py  peer_bot_extracted_specs.md  peer_payoff_model.py  r0_post_mortem_2026_04_21.md  strategy_delta_vs_joey.md  strategy_delta_vs_peer.md  validation_summary_2026_04_21.md
logs/: a2_pilot_frozen_feature_result.json  baseline1_report.md  baseline1_v2_report.md  baseline1_v3_report.md  baselines_2_3_report.md  day2_5_diagnostics.md  eda_report.md  intraday_day1_report.md  intraday_day2_report.md  intraday_day3_report.md  leak_safe_verification.md  r0_check0_payoff_geometry_result.json  r0_check2_dumb_mae_result.json  r0_check2b_grid_sensitivity_result.json  r0_check2c_momentum_result.json  r0_check3_dealer_sign_result.json  v3_open_filter_result.json  (+3 more)
(+68 files in other folders)
